--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body class="bg-dark">
     <div class="container">
@@ -37,11 +38,9 @@
               </div>
             </form>
             <!-- LOADER -->
-            <!--
             <div id="loading">
               <img src="img/loading.gif" alt="">
             </div>
-            -->
             <!-- RESULTS -->
             <div id="results" class="pt-4">
               <h5>Results</h5>
